--- a/VulkanTest.vcxproj
+++ b/VulkanTest.vcxproj
@@ -97,6 +97,10 @@
       <AdditionalLibraryDirectories>C:\VulkanSDK\1.2.131.2\Lib;C:\Users\sjpark\Documents\glfw-3.3.2.bin.WIN64\lib-vc2019</AdditionalLibraryDirectories>
       <AdditionalDependencies>vulkan-1.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>C:\VulkanSDK\1.2.131.2\Bin32\glslc.exe shaders\shader.vert -o shaders\vert.spv
+C:\VulkanSDK\1.2.131.2\Bin32\glslc.exe shaders\shader.frag -o shaders\frag.spv</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -113,6 +117,10 @@
       <AdditionalLibraryDirectories>C:\VulkanSDK\1.2.131.2\Lib;C:\Users\sjpark\Documents\glfw-3.3.2.bin.WIN64\lib-vc2019</AdditionalLibraryDirectories>
       <AdditionalDependencies>vulkan-1.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>C:\VulkanSDK\1.2.131.2\Bin32\glslc.exe shaders\shader.vert -o shaders\vert.spv
+C:\VulkanSDK\1.2.131.2\Bin32\glslc.exe shaders\shader.frag -o shaders\frag.spv</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -133,6 +141,10 @@
       <AdditionalLibraryDirectories>C:\VulkanSDK\1.2.131.2\Lib;C:\Users\sjpark\Documents\glfw-3.3.2.bin.WIN64\lib-vc2019</AdditionalLibraryDirectories>
       <AdditionalDependencies>vulkan-1.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>C:\VulkanSDK\1.2.131.2\Bin32\glslc.exe shaders\shader.vert -o shaders\vert.spv
+C:\VulkanSDK\1.2.131.2\Bin32\glslc.exe shaders\shader.frag -o shaders\frag.spv</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -153,15 +165,17 @@
       <AdditionalLibraryDirectories>C:\VulkanSDK\1.2.131.2\Lib;C:\Users\sjpark\Documents\glfw-3.3.2.bin.WIN64\lib-vc2019</AdditionalLibraryDirectories>
       <AdditionalDependencies>vulkan-1.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>C:\VulkanSDK\1.2.131.2\Bin32\glslc.exe shaders\shader.vert -o shaders\vert.spv
+C:\VulkanSDK\1.2.131.2\Bin32\glslc.exe shaders\shader.frag -o shaders\frag.spv</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="shaders\frag.spv" />
     <None Include="shaders\shader.frag" />
     <None Include="shaders\shader.vert" />
-    <None Include="shaders\vert.spv" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="textures\texture.jpg" />
