--- a/VulkanTest.vcxproj
+++ b/VulkanTest.vcxproj
@@ -178,10 +178,20 @@ C:\VulkanSDK\1.2.131.2\Bin32\glslc.exe shaders\shader.frag -o shaders\frag.spv</
     <None Include="shaders\shader.vert" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="textures\chalet.jpg" />
     <Image Include="textures\texture.jpg" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stb_image.h" />
+    <ClInclude Include="tiny_obj_loader.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Object Include="models\chalet.obj">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </Object>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
