--- a/VulkanTest.vcxproj.filters
+++ b/VulkanTest.vcxproj.filters
@@ -37,10 +37,19 @@
     <Image Include="textures\texture.jpg">
       <Filter>testures</Filter>
     </Image>
+    <Image Include="textures\chalet.jpg">
+      <Filter>testures</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stb_image.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="tiny_obj_loader.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Object Include="models\chalet.obj" />
   </ItemGroup>
 </Project>
